added some basic CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>Catia's Personal Site</title>
+
+    <!-- call for CSS -->
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 
   <body>
@@ -11,7 +14,7 @@
     <table cellspacing="20"> <!-- cellspacing margem da tabela a partir da extremidade da página -->
       <tr>
         <td>
-          <img src="Images\catia_personal_photo.png" alt="Catia profile picture">
+          <img class="main_picture" src="Images\catia_personal_photo.png" alt="Catia profile picture">
         </td>
         <td>
           <h1>Cátia Pinto</h1>
@@ -36,7 +39,7 @@
 
     <hr>
 
-    <p>Education</p>
+    <h2>Education</h2>
     <table>
       <thead>
         <tr>
@@ -64,7 +67,7 @@
 
     <hr>
 
-    <p>Works as a Computer Engineer</p>
+    <h2>Works as a Computer Engineer</h2>
     <ul>
       <li>
         <strong>Research Scholarship by ISEP</strong> win at 02/04/2019
@@ -78,7 +81,7 @@
 
     <hr>
 
-    <p>Skills</p>
+    <h2>Skills</h2>
     <table cellspacing="10">
       <tbody>
         <tr> <!-- first row -->
@@ -140,7 +143,7 @@
 
     <hr>
 
-    <p>Achievements/Experience</p>
+    <h2>Achievements/Experience</h2>
     <ul>
       <li>
         <strong>Completed </strong>"<a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete 2019 Web Development Bootcamp</a>"
@@ -149,7 +152,7 @@
 
     <hr>
 
-    <p>Languages</p>
+    <h2>Languages</h2>
 
     <hr>
 
