--- a/Aditional Web Pages/contact_me.html
+++ b/Aditional Web Pages/contact_me.html
@@ -18,10 +18,12 @@
     <!-- opens action="mailto:catiapspinto96@gmail.com" an email box for the user to message me -->
     <form class="" action="mailto:catiapspinto96@gmail.com" method="post" enctype="text/pain">
       <label for="">Your Name: </label>
-      <input type="text" name="" value=""> <!-- store the user information-->
+      <input type="text" name="yourName" value=""> <!-- store the user information-->
       <br>
       <label for="">Your email: </label>
-      <textarea name="name" rows="10" cols="80"></textarea> <!-- rows = how tall || cols == how hide it should be -->
+      <input type="email" name="yourEmail" value=""> <!-- value identifies the data inside the input's -->
+      <textarea name="yourMessage" rows="10" cols="80"></textarea> <!-- rows = how tall || cols == how hide it should be -->
+      <br>
       <input type="submit" name=""> <!-- subtmit button -->
     </form>
   </body>
