--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <tr>
               <td>Massive Lab (UTAD) win at 02/2018</td>
               <td>Tracking humanoide in virtual reality</td>
-              <td>a full semester</td>
+              <td>a full semester (degree project)</td>
             </tr>
           </table>
 
